--- a/templates/chat/base.html
+++ b/templates/chat/base.html
@@ -8,14 +8,18 @@
 </head>
 
 <body>
-  <br>
-  <br>
-  あなたはUSER Aです。
-  <a href='/chat/'>HOME</a><br><br>
+  <br><br>
+  <div id='flex'>
+    あなたは{{ user.get_username }}です。
+    <a href='/chat/index'>index</a>&nbsp;&nbsp;
+    <a href='/chat/logout'>ログアウト</a><br><br>
+  </div>
   <hr>
   <div id='flexbox'>
     {% block main %}
     {% endblock %}
   </div>
+
+  {% block js %}{% endblock %}
 </body>
 </html>
