--- a/templates/chat/room.html
+++ b/templates/chat/room.html
@@ -7,14 +7,30 @@
 {% endblock %}
 {% block main %}
   <div id='message_box'>
-    {% for message in message_list%}
-      {% if message.0 == '0' %}
-        <p id='right'>{{ message|slice:"19:" }}</p>
-      {% else %}
-        <p id='left'>{{ message|slice:"19:" }}</p>
-      {% endif %}
-    {% endfor %}
-    <hr>
+    <div id='message_header'>
+      &nbsp;&nbsp;&nbsp;&lt;&lt;&lt;&nbsp;&nbsp;{{ other_name }}
+    </div>
+    <div id='message'>
+      {% for message in message_list%}
+        {% if message.0 == my_id %}
+          <div id='right'>
+            <p>
+              {{ message|slice:"13:15"}}:
+              {{ message|slice:"16:18"}}
+            </p>
+            {{ message|slice:"19:"}}
+          </div>
+        {% else %}
+          <div id='left'>
+            <p>
+              {{ message|slice:"13:15"}}:
+              {{ message|slice:"16:18"}}
+            </p>
+            {{ message|slice:"19:"}}
+          </div>
+        {% endif %}
+      {% endfor %}
+    </div>
     <div id='send'>
       <form method="post">
         {% csrf_token %}
@@ -25,3 +41,10 @@
     </div>
   </div>
 {%endblock%}
+
+
+{% block js %}
+<script>
+  <!-- setTimeout("location.reload()",5000); -->
+</script>
+{% endblock %}
