--- a/templates/chat/base.html
+++ b/templates/chat/base.html
@@ -12,7 +12,9 @@
   <div id='flex'>
     あなたは{{ user.get_username }}です。
     <a href='/chat/index'>index</a>&nbsp;&nbsp;
-    <a href='/chat/logout'>ログアウト</a><br><br>
+    <a href='/chat/logout'>ログアウト</a>&nbsp;&nbsp;
+    <a href='/chat/ajax'>hello</a>&nbsp;&nbsp;
+    <br><br>
   </div>
   <hr>
   <div id='flexbox'>
