--- a/static/chat/room.css
+++ b/static/chat/room.css
@@ -57,6 +57,7 @@
   padding-left: 10px;
   padding-right: 10px;
   background-color: #BAD3FF;
+  text-align: center;
   /* border: 1px solid red; */
 }
 
