--- a/templates/chat/ajax.html
+++ b/templates/chat/ajax.html
@@ -1,1 +1,39 @@
-a
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+  <meta charset="utf-8" />
+<title>タイトル</title>
+</head>
+<body>
+  <form name="name_form" action="/chat/response/" method="POST">
+    <!-- <form name="name_form" action="/test_ajax_app/" method="POST"> -->
+    {% csrf_token %}
+    <input type="text" id="id_input_text" name="name_input_text" value="999.99">
+    <input class="btn" type="submit">
+  </form>
+
+  <div id='ajax'>{{ now }}</div>
+
+  <script>
+    var ajax = function(){
+      console.log('aiueo')
+      $.ajax({
+        url: '/chat/response',
+        method: 'GET',
+        data: { name: 'aiueo'},
+        success: function(data){
+          $('#ajax').html(data)
+        },
+        timeout: 10000,
+        dataType: "text"
+      });
+    }
+    setInterval(ajax, 3000);
+  </script>
+
+
+</body>
+</html>
