--- a/templates/chat/base.html
+++ b/templates/chat/base.html
@@ -13,7 +13,7 @@
     あなたは{{ user.get_username }}です。
     <a href='/chat/index'>index</a>&nbsp;&nbsp;
     <a href='/chat/logout'>ログアウト</a>&nbsp;&nbsp;
-    <a href='/chat/ajax'>hello</a>&nbsp;&nbsp;
+    <!-- <a href='/chat/ajax'>hello</a>&nbsp;&nbsp; -->
     <br><br>
   </div>
   <hr>
