--- a/templates/chat/room.html
+++ b/templates/chat/room.html
@@ -4,11 +4,15 @@
 {% load static %}
 {% block css %}
   <link href="{% static 'chat/room.css' %}" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 {% endblock %}
 {% block main %}
   <div id='message_box'>
     <div id='message_header'>
       &nbsp;&nbsp;&nbsp;&lt;&lt;&lt;&nbsp;&nbsp;{{ other_name }}
+      <!-- <a href="javascript:void(0);" onclick="Aclick();">クリック</a> -->
     </div>
     <div id='message'>
       {% if message_list %}
@@ -53,7 +57,27 @@
 
 
 {% block js %}
-<script>
-  <!-- setTimeout("location.reload()",5000); -->
-</script>
+  <script>
+    var room_name = location.pathname.slice(11, -1)
+    var ajax = function(){
+      $.ajax({
+        url: '/chat/message',
+        // method: 'POST',
+        method: 'GET',
+        data: { room_name: room_name},
+        success: function(message){
+          $('#message').html(message)
+        },
+        timeout: 10000,
+        dataType: "text"
+      });
+    }
+    setInterval(ajax, 5000);
+
+    // function Aclick() {
+    //   ajax()
+    //   return false;
+    // }
+
+  </script>
 {% endblock %}
